welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: '=' expected but ';' found.
for (i<-1 to num){
^